[package]
name = "web3-domain-registrar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []
no-referrer-check = []
no-special-discount-fee = []
devnet = []

default = ["devnet"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
solana-program = "2.1.14"
num-traits = "0.2.14"
num-derive = "0.3.3"
borsh = "0.10.3"
thiserror = "1.0.24"
web3-domain-name-service = {version = "0.1.3", features = ["no-entrypoint"]}
unicode-segmentation = "1.10.1"
web3-utils = { version = "0.2.1", features = ["devnet"] }
solana-system-interface = { version = "1", features = ["bincode"] }


[lib]
crate-type = ["cdylib", "lib"]


